src/assets/media.css
@media screen and (max-width: 1800px) {
  .scrollTopBtn {
    right: 14%;
  }
}

@media screen and (max-width: 1500px) {
  .scrollTopBtn {
    right: 11%;
  }
}

@media screen and (max-width: 1400px) {
  .scrollTopBtn {
    right: 7%;
  }
}

@media screen and (max-width: 1200px) {
  .scrollTopBtn {
    right: 3%;
  }
}

@media screen and (max-width: 1100px) {
  .scrollTopBtn {
    right: 0%;
  }
}

@media screen and (min-width: 1024px) {
  .lg\:max-w-5xl {
    max-width: 70rem !important;
  }
}

@media screen and (max-width: 1000px) {
  .scrollTopBtn {
    display: none;
  }
}

@media screen and (max-width: 600px) {
  .leftWrapper {
    justify-content: space-between;
    align-items: center;
    margin-top: 20px;
  }

  .leftWrapper .button {
  }

  .prevControl {
    margin-right: 200px;
  }

  .paginatorInnerWrapper {
    margin-top: 0;
    /* margin-left: 12px; */
  }

  .cardsWrapper {
    gap: 0;
    position: relative;
    margin-left: 17px;
    margin-right: 17px;
    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
      var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
    --tw-shadow: 0 1px 15px 0px #2f303214;
    --tw-shadow-colored: 0 1px 15px 0px var(--tw-shadow-color);
  }

  .explorerCard {
    display: flex;
    flex-direction: row;
    align-items: center;
    box-shadow: none !important;
    border-radius: 0;
    border-bottom: 1px solid #ebecef;
    padding-right: 30px;
    padding-left: 20px;
    padding-top: 15px;
    padding-bottom: 15px;
  }

  .explorerCard:last-child {
    border-bottom: 0;
  }

  .cardsWrapper::before {
    content: "";
    position: absolute;
    left: 0px;
    top: 0;
    width: 25px;
    height: 100%;
    background-color: #fff;
    z-index: 999;
  }

  .cardsWrapper::after {
    content: "";
    position: absolute;
    right: 0px;
    top: 0;
    width: 25px;
    height: 100%;
    background-color: #fff;
    z-index: 999;
  }

  .explorerCard h1 {
    order: 3;
    margin-left: auto;
  }

  .explorerCard h2,
  .explorerCard h1 {
    margin-top: 0%;
  }

  .explorerCard img {
    margin-right: 10px;
  }

  .dotsImg {
    display: none;
  }
  .paginatorLabel {
    left: 50%;
  }

  .paginatorInnerWrapper {
    justify-content: space-between;
  }

  .prevControl {
    margin-right: 125px;
  }

  .paginatorWraper .button {
    display: none;
  }

  .paginatorWraper {
    flex-direction: column;
    align-items: flex-start;
    /* padding-left: 16px;
    padding-right: 16px; */
    position: sticky;
    left: 0;
  }

  .loaderWrap {
    max-width: 100vw;
  }

  .desktopOnly {
    display: none;
  }

  .mobileOnly {
    display: block;
  }

  .detailsListRow {
    flex-direction: column;
    align-items: flex-start;
  }

  .detailsListRow p {
    margin-left: 0;
  }

  .nftWrapper {
    width: 100% !important;
    height: auto;
  }

  .infoTextContainer.longCol {
    padding-left: 1px !important;
  }

  .infoTextContainer.longCol .loadedWrapper {
    flex-direction: column;
    border-bottom: 0.5px solid var(--grey-borders);
    padding-bottom: 12px;
  }

  .infoTextContainer.longCol .mobileOnly {
    margin-bottom: 0;
    border-bottom: none;
  }

  .loadedWrapper > div {
    font-weight: normal;
  }

  .loadedWrapper .hashTitle,
  .mobileOnly.loadedWrapper,
  .loadedWrapper .boldTxt {
    font-weight: 500;
  }

  .flex.items-start.justify-start.loadedWrapper {
    padding-bottom: 20px;
  }

  .loadedWrapper.trxWrapper .mobileOnly {
    margin-bottom: 10px;
  }

  .copyBtnWrapper a {
    font-weight: normal;
  }

  .flex.w-full.loadedWrapper {
    padding-bottom: 16px;
    padding-top: 0px;
    /* padding-left: 12px; */
  }

  .loadedWrapper.trxWrapper {
    /* padding-left: 12px; */
  }

  .detailsCard {
    padding: 0;
  }

  .infoTextContainer.longCol {
    margin-left: 0;
  }

  .detailsListRow {
    padding-top: 10px;
  }

  .flex.items-start.justify-start.gap-2.border-b.py-4.detailsListRow {
    padding-top: 14px;
    padding-bottom: 12px;
  }

  .explorerCard {
    padding-left: 20px;
  }

  .dotsImg {
    width: 24%;
  }

  /*.tableWrapper tbody tr{
        border-bottom: 1.4px solid rgb(236, 229, 229) !important;
    }

    /*.tableWrapper tbody tr .sticky {
        border-bottom: 1.3px solid rgb(236, 229, 229) !important;
    }*/

  /* .tableWrapper tbody tr .sticky {
        border-bottom: .9px solid rgb(236, 229, 229) !important;
    }*/

  .sitckyBottomLine {
    border-bottom: 0.9px solid rgb(236, 229, 229) !important;
  }

  .safariHack {
    border-bottom: 1.8px solid rgb(236, 229, 229) !important;
  }
}

